--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -1,12 +1,12 @@
-@import "typo";
-@import "form";
+@use "typo";
+@use "form";
 
 html {
   -webkit-tap-highlight-color: transparent;
 }
 
 body {
-  font-family: "Open-Sans", ui-sans-serif, system-ui, -apple-system,
+  font-family: "Inter", "Open-Sans", ui-sans-serif, system-ui, -apple-system,
     BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol,
     "Noto Color Emoji" !important;
@@ -23,22 +23,22 @@ body {
 }
 
 /* Scrollbar Styling */
-::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
-}
+// ::-webkit-scrollbar {
+//   width: 6px;
+//   height: 6px;
+// }
 
-::-webkit-scrollbar-track {
-  background-color: transparent;
-  -webkit-border-radius: 6px;
-  border-radius: 6px;
-}
+// ::-webkit-scrollbar-track {
+//   background-color: transparent;
+//   -webkit-border-radius: 6px;
+//   border-radius: 6px;
+// }
 
-::-webkit-scrollbar-thumb {
-  -webkit-border-radius: 6px;
-  border-radius: 6px;
-  background: rgb(144, 147, 153, 0.3);
-}
+// ::-webkit-scrollbar-thumb {
+//   -webkit-border-radius: 6px;
+//   border-radius: 6px;
+//   background: rgb(144, 147, 153, 0.3);
+// }
 
 /*  LIST ANIMATION* /
 
